--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -73,8 +73,8 @@
                         </button>
                       </mat-cell>
                     </ng-container>
-                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                    <mat-header-row *matHeaderRowDef="displayedBudgetsColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedBudgetsColumns;"></mat-row>
                     <!-- Row shown when there is no matching data. -->
                     <tr class="mat-row" *matNoDataRow>
                       <td class="mat-cell" colspan="3">Nenhum registro encontrado.</td>
@@ -84,8 +84,221 @@
                 </div>
               </div>
             </mat-tab>
-           <mat-tab label="Orçamento">
-                    <app-orcamento-cadastro></app-orcamento-cadastro>
+            <!-- ORÇAMENTO TAB -->
+             <mat-tab label="Orçamento">
+              <mat-stepper #stepper class="example-stepper" [orientation]="(stepperOrientation | async)!">
+                <mat-step [stepControl]="firstFormGroup" label="Identificação" >
+                    <form [formGroup]="firstFormGroup" class="mt-3">
+                        <div class="div-row-input">
+                            <mat-form-field appearance="fill" class="col-sm-12">
+                                <mat-label>Responsável Financeiro</mat-label>
+                                <input type="text" id="personResponsibleId"
+                                    placeholder="Selecione a pessoa responsável pelo Orçamento" aria-label="Number" matInput
+                                    [formControl]="myControl" [matAutocomplete]="auto" required>
+                                <mat-autocomplete #auto="matAutocomplete">
+                                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                                        {{option}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                                <mat-icon matSuffix>search</mat-icon>
+                            </mat-form-field>
+                        </div>
+                        <div class="div-row-input">
+                            <mat-form-field appearance="fill" class="col-sm-7">
+                                <mat-label>Usuário Colaborador</mat-label>
+                                <input type="text" id="userSellerId" placeholder="Selecione o usuário responsável pela venda"
+                                    aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" required>
+                                <mat-autocomplete #auto="matAutocomplete">
+                                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                                        {{option}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                                <mat-icon matSuffix>search</mat-icon>
+                            </mat-form-field>
+
+                            <mat-form-field appearance="fill" class="col-sm-5 ml-0">
+                                <mat-label>Validade</mat-label>
+                                <input matInput [matDatepicker]="picker" id="validity" mask="00/00/0009">
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker #picker></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="div-row-input">
+                            <mat-form-field class="example-full-width" appearance="fill" class="col-sm-12">
+                                <mat-label>Detalhes</mat-label>
+                                <textarea matInput placeholder="Informações complementares" id="details"></textarea>
+                            </mat-form-field>
+                        </div>
+                        <div>
+                            <div class="mt-5" style="float:right;">
+                                <button color="primary"  mat-mini-fab  aria-label="Example icon button with a menu icon"
+                                    matTooltip="Próximo" matTooltipPosition="above">
+                                    <!-- colocar o (click)="onNext(stepper)" -->
+                                    <mat-icon>chevron_right</mat-icon>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step [stepControl]="secondFormGroup" label="Produtos">
+                    <form [formGroup]="secondFormGroup" class="mt-3">
+                        <div class="demo-button-container offset-sm-1 col-sm-11 p-0">
+                            <button mat-mini-fab class="demo-button me-2 create-button" matTooltip="Inserir Produto"
+                                matTooltipPosition="right" (click)="openProductDialog()">
+                                <mat-icon>add</mat-icon>
+                            </button>
+                        </div>
+                        <div id="search-table-product" class="search-table offset-sm-1 col-sm-11 p-0">
+                            <table mat-table [dataSource]="dataSource" class="col-sm-11 offset-sm-1">
+
+                                <ng-container matColumnDef="product">
+                                    <th mat-header-cell *matHeaderCellDef> Produto </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.product}} </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="dose">
+                                    <th mat-header-cell *matHeaderCellDef> Dose </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.dose}} </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="borrower">
+                                    <th mat-header-cell *matHeaderCellDef> Tomador </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.borrower}} </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="amount">
+                                    <th mat-header-cell *matHeaderCellDef> R$ Total </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                                </ng-container>
+
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            </table>
+
+                        </div>
+                        <div class="mt-5" style="float:right;">
+                            <button color="primary" mat-mini-fab matStepperPrevious aria-label="Example icon button with a menu icon"
+                                matTooltip="Anterior" matTooltipPosition="above" class="me-2">
+                                <mat-icon>chevron_left</mat-icon>
+                            </button>
+
+                            <button color="primary" mat-mini-fab matStepperNext aria-label="Example icon button with a menu icon"
+                                matTooltip="Próximo" matTooltipPosition="above">
+                                <mat-icon>chevron_right</mat-icon>
+                            </button>
+
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step [stepControl]="thirdFormGroup" label="Valores">
+                    <form [formGroup]="thirdFormGroup" class="mt-3">
+                        <div class="div-row-input">
+                            <mat-form-field appearance="fill" floatLabel="always" class="col-sm-4">
+                                <mat-label>R$ Produtos Orçados</mat-label>
+                                <input matInput type="text" class="example-right-align" placeholder="0,00" id="saleValue"
+                                    required="true" readonly="true" mask="separator.2" [thousandSeparator]="'.'"
+                                    [decimalMarker]="','">
+                                <span matPrefix>R$&nbsp;</span>
+                            </mat-form-field>
+                        </div>
+                        <div class="div-row-input">
+                            <mat-form-field appearance="fill" floatLabel="always" class="col-sm-4">
+                                <mat-label>R$ Desconto</mat-label>
+                                <input matInput type="text" class="example-right-align" placeholder="0,00" id="discount"
+                                    required="true" mask="separator.2" [thousandSeparator]="'.'" [decimalMarker]="','">
+                                <span matPrefix>R$&nbsp;</span>
+                            </mat-form-field>
+
+                            <mat-form-field appearance="fill" floatLabel="always" class="col-sm-4" style="font-weight:bold">
+                                <mat-label>R$ Total Orçamento</mat-label>
+                                <input matInput type="text" class="example-right-align" placeholder="0,00" id="finalValue"
+                                    required="true" readonly="true" mask="separator.2" [thousandSeparator]="'.'"
+                                    [decimalMarker]="','">
+                                <span matPrefix>R$&nbsp;</span>
+                            </mat-form-field>
+                        </div>
+                        <div class="mt-5" style="float:right;">
+                            <button mat-mini-fab matStepperPrevious aria-label="Example icon button with a menu icon"
+                                matTooltip="Anterior" matTooltipPosition="above" color="primary" class="me-2">
+                                <mat-icon>chevron_left</mat-icon>
+                            </button>
+                            <button mat-mini-fab matStepperNext color="primary" aria-label="Example icon button with a menu icon"
+                                matTooltip="Definir Pagamento" matTooltipPosition="above" class="create-button">
+                                <mat-icon>attach_money</mat-icon>
+                            </button>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step [stepControl]="fourthFormGroup" label="Negociação">
+                    <form [formGroup]="fourthFormGroup" class="mt-3">
+                        <div class="div-row-input values" title="Valor restante">
+                            <i class="fa-solid fa-cart-shopping me-2"></i>
+                            <span>100,00</span>
+                        </div>
+                        <div class="div-row-input">
+                            <mat-form-field appearance="fill" class="col-sm-5">
+                                <mat-label>Forma de Pagamento</mat-label>
+                                <input matInput #input maxlength="10" placeholder="Selecione a forma de pagamento" id="paymentForm">
+                            </mat-form-field>
+
+                            <mat-form-field appearance="fill" class="col-sm-3">
+                                <mat-label>Nº Parcelas</mat-label>
+                                <input matInput #input type="number" maxlength="10" placeholder="Ex. 2" id="name">
+                            </mat-form-field>
+
+                            <mat-form-field appearance="fill" floatLabel="always" class="col-sm-3">
+                                <mat-label>R$ Negociado</mat-label>
+                                <input matInput type="text" class="example-right-align" placeholder="0,00" id="negotiatedValue"
+                                    required="true" readonly="true" mask="separator.2" [thousandSeparator]="'.'"
+                                    [decimalMarker]="','">
+                                <span matPrefix>R$&nbsp;</span>
+                            </mat-form-field>
+
+                            <button mat-mini-fab class="demo-button create-button" matTooltip="Inserir Negociação"
+                                matTooltipPosition="above">
+                                <mat-icon>add</mat-icon>
+                            </button>
+
+                        </div>
+                        <div id="search-table-payment" class="search-table col-sm-12 p-0">
+                            <table mat-table [dataSource]="dataSource2" class="col-sm-12">
+
+                                <ng-container matColumnDef="paymentForm">
+                                    <th mat-header-cell *matHeaderCellDef> Forma de Pagamento </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.paymentForm}} </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="portion">
+                                    <th mat-header-cell *matHeaderCellDef> Parcelas </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.portion}} </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="negotiatedValue">
+                                    <th mat-header-cell *matHeaderCellDef> R$ Negociado </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.negotiatedValue}} </td>
+                                </ng-container>
+
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
+                            </table>
+
+                        </div>
+                        <div class="mt-5" style="float:right;">
+                            <button mat-mini-fab matStepperPrevious matTooltip="Reabrir" matTooltipPosition="above" class="me-2">
+                                <mat-icon>reply_all</mat-icon>
+                            </button>
+                            <button mat-mini-fab matTooltip="Cancelar" color="warn" matTooltipPosition="above" class="me-2">
+                                <mat-icon>close</mat-icon>
+                            </button>
+                            <button mat-mini-fab matStepperNext aria-label="Example icon button with a menu icon"
+                                matTooltip="Aprovar" matTooltipPosition="above" class="create-button">
+                                <mat-icon>done</mat-icon>
+                            </button>
+                        </div>
+                    </form>
+                </mat-step>
+            </mat-stepper>
            </mat-tab>
           </mat-tab-group>
         </app-container>
