--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -44,6 +44,12 @@
                       <mat-cell [hidden]="show" *matCellDef="let row">
                         {{row.ID}} </mat-cell>
                     </ng-container>
+                    <!-- User Id Hidden Column -->
+                    <ng-container matColumnDef="UserID">
+                      <mat-header-cell *matHeaderCellDef [hidden]="show"> UserID </mat-header-cell>
+                      <mat-cell [hidden]="show" *matCellDef="let row">
+                        {{row.Users.ID}} </mat-cell>
+                    </ng-container>
                     <!-- Numero do orçamento -->
                     <ng-container matColumnDef="BudgetNumber">
                         <mat-header-cell *matHeaderCellDef> Orçamento nº </mat-header-cell>
@@ -52,7 +58,7 @@
                     <!-- Nome da pessoa -->
                     <ng-container matColumnDef="PersonName">
                         <mat-header-cell *matHeaderCellDef> Pessoa </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.Persons.Name}} </mat-cell>
+                        <mat-cell *matCellDef="let element"> {{element.Users.Person.Name}} </mat-cell>
                     </ng-container>
                     <!-- Data de validade -->
                     <ng-container matColumnDef="ExpirationDate">
@@ -90,27 +96,15 @@
                 <mat-step [stepControl]="firstFormGroup" label="Identificação" >
                     <form [formGroup]="budgetForm" class="mt-3">
                         <div class="div-row-input">
-                            <mat-form-field appearance="fill" class="col-sm-12">
-                                <mat-label>Responsável Financeiro</mat-label>
-                                <input type="text" id="personResponsibleId"
-                                    placeholder="Selecione a pessoa responsável pelo Orçamento" aria-label="Number" matInput
-                                    [formControl]="myControl" [matAutocomplete]="auto" required>
-                                <mat-autocomplete #auto="matAutocomplete">
-                                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                                        {{option}}
-                                    </mat-option>
-                                </mat-autocomplete>
-                                <mat-icon matSuffix>search</mat-icon>
-                            </mat-form-field>
                             <!-- PESSOA -->
-                            <!-- <mat-form-field appearance="fill" class="col-sm-11">
+                            <mat-form-field appearance="fill" class="col-sm-12">
                               <mat-label>Pessoa</mat-label>
                               <input (click)="searchPersonByAutoComplete()"
                                      [readonly]="isInputReadOnly"
                                      type="text"
                                      id="personId"
                                      #PersonIdinput
-                                     placeholder="Selecione a Pessoa Jurídica"
+                                     placeholder="Selecione a Pessoa"
                                      aria-label="Number"
                                      matInput
                                      formControlName="PersonId"
@@ -127,20 +121,34 @@
                                   </mat-option>
                               </mat-autocomplete>
                               <mat-icon matSuffix>search</mat-icon>
-                          </mat-form-field> -->
+                          </mat-form-field>
                         </div>
                         <div class="div-row-input">
                             <!-- USUÁRIO -->
                             <mat-form-field appearance="fill" class="col-sm-7">
-                                <mat-label>Usuário Colaborador</mat-label>
-                                <input type="text" id="userSellerId" placeholder="Selecione o usuário responsável pela venda"
-                                    aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" required>
-                                <mat-autocomplete #auto="matAutocomplete">
-                                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                                        {{option}}
-                                    </mat-option>
-                                </mat-autocomplete>
-                                <mat-icon matSuffix>search</mat-icon>
+                                <mat-label>Usuário colaborador</mat-label>
+                              <input (click)="searchPersonByAutoComplete()"
+                                     [readonly]="isInputReadOnly"
+                                     type="text"
+                                     id="personId"
+                                     #UserIdinput
+                                     placeholder="Selecione o usuário responsável pela venda"
+                                     aria-label="Number"
+                                     matInput
+                                     formControlName="UserId"
+                                     [matAutocomplete]="auto" [(ngModel)]="personId" required>
+                              <mat-error
+                                  *ngIf="budgetForm.controls.UserId.touched && budgetForm.controls.UserId.invalid">
+                                  <span *ngIf="budgetForm.controls.UserId.errors?.required">O usuário é obrigatório.</span>
+                              </mat-error>
+                              <mat-autocomplete #auto="matAutocomplete"
+                                                [displayWith]="displayState">
+                                  <mat-option *ngFor="let option of filteredOptions | async"
+                                      [value]="option">
+                                      {{option.Name}}
+                                  </mat-option>
+                              </mat-autocomplete>
+                              <mat-icon matSuffix>search</mat-icon>
                             </mat-form-field>
                             <!-- VALIDADE -->
                             <mat-form-field appearance="fill" class="col-sm-5 ml-0">
@@ -159,7 +167,7 @@
                           <!-- DETALHES -->
                           <mat-form-field class="example-full-width"
                                           appearance="fill"
-                                          class="col-sm-11">
+                                          class="col-sm-12">
                             <mat-label>Detalhes</mat-label>
                             <textarea matInput
                                       #DetailsInput
