--- a/VaccineC/src/app/pages/orcamentos/budget-product-dialog.html
+++ b/VaccineC/src/app/pages/orcamentos/budget-product-dialog.html
@@ -62,8 +62,8 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button class="create-button" [mat-dialog-close]="true" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
 
 <style>
