--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -27,12 +27,16 @@
                                 matSortActive="BudgetNumber" matSortDirection="asc">
                                 <!-- Numero do orçamento -->
                                 <ng-container matColumnDef="BudgetNumber">
-                                    <mat-header-cell *matHeaderCellDef> Orçamento nº </mat-header-cell>
-                                    <mat-cell *matCellDef="let element"> {{element.BudgetNumber}} </mat-cell>
+                                    <mat-header-cell *matHeaderCellDef> Orçamento </mat-header-cell>
+                                    <mat-cell *matCellDef="let element"> 
+                                        {{resolveExibitionSituation(element.Situation)}} 
+                                        <span title="{{situationTitle}}" class="me-3 fa-solid fa-circle {{situationColor}}"></span>
+                                        {{element.BudgetNumber}} 
+                                    </mat-cell>
                                 </ng-container>
                                 <!-- Nome da pessoa -->
                                 <ng-container matColumnDef="PersonName">
-                                    <mat-header-cell *matHeaderCellDef> Pessoa </mat-header-cell>
+                                    <mat-header-cell *matHeaderCellDef> Responsável </mat-header-cell>
                                     <mat-cell *matCellDef="let element"> {{element.Persons.Name}} </mat-cell>
                                 </ng-container>
                                 <!-- Data de validade -->
@@ -290,7 +294,7 @@
                             <form [formGroup]="fourthFormGroup" class="mt-3">
                                 <div class="div-row-input values" title="Valor restante">
                                     <i class="fa-solid fa-cart-shopping me-2"></i>
-                                    <span>100,00</span>
+                                    <span>{{balanceNegotiations | currency : 'R$' }}</span>
                                 </div>
                                 <div class="div-row-input">
                                     <mat-form-field appearance="fill" class="col-sm-5">
@@ -319,28 +323,54 @@
                                     </button>
 
                                 </div>
-                                <div id="search-table-payment" class="search-table col-sm-12 p-0">
-                                    <table mat-table [dataSource]="dataSource2" class="col-sm-12">
+                                <div id="budget-payment-table">
+                                    <div class="col-sm-11 search-table-content mat-elevation-z2">
+                                        <table mat-table [dataSource]="dataSourceBudgetNegotiation" class="col-sm-12">
 
-                                        <ng-container matColumnDef="paymentForm">
-                                            <th mat-header-cell *matHeaderCellDef> Forma de Pagamento </th>
-                                            <td mat-cell *matCellDef="let element"> {{element.paymentForm}} </td>
-                                        </ng-container>
+                                            <ng-container matColumnDef="PaymentFormName">
+                                                <th mat-header-cell *matHeaderCellDef> Forma de Pagamento </th>
+                                                <td mat-cell *matCellDef="let element">
+                                                    {{element.PaymentForm.Name}}
+                                                </td>
+                                            </ng-container>
 
-                                        <ng-container matColumnDef="portion">
-                                            <th mat-header-cell *matHeaderCellDef> Parcelas </th>
-                                            <td mat-cell *matCellDef="let element"> {{element.portion}} </td>
-                                        </ng-container>
+                                            <ng-container matColumnDef="Installments">
+                                                <th mat-header-cell *matHeaderCellDef> Parcelas </th>
+                                                <td mat-cell *matCellDef="let element">{{element.Installments}}</td>
+                                            </ng-container>
 
-                                        <ng-container matColumnDef="negotiatedValue">
-                                            <th mat-header-cell *matHeaderCellDef> R$ Negociado </th>
-                                            <td mat-cell *matCellDef="let element"> {{element.negotiatedValue}} </td>
-                                        </ng-container>
+                                            <!-- Total -->
+                                            <ng-container matColumnDef="TotalAmountTraded">
+                                                <th mat-header-cell *matHeaderCellDef> R$ Total Negociado </th>
+                                                <td mat-cell *matCellDef="let element"> {{element.TotalAmountTraded | currency : 'R$' }} </td>
+                                            </ng-container>
 
-                                        <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-                                        <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
-                                    </table>
+                                            <!-- Id Hidden Column -->
+                                            <ng-container matColumnDef="ID">
+                                                <th mat-header-cell [hidden]="show" *matHeaderCellDef> ID </th>
+                                                <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+                                            </ng-container>
 
+                                            <ng-container matColumnDef="Options">
+                                                <th mat-header-cell *matHeaderCellDef> </th>
+                                                <td mat-cell *matCellDef="let row">
+                                                    <button mat-icon-button color="warn" title="Remover" style="float:right;">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </ng-container>
+                                            <tr mat-header-row *matHeaderRowDef="displayedColumnsBudgetNegotiation">
+                                            </tr>
+                                            <tr mat-row *matRowDef="let row; columns: displayedColumnsBudgetNegotiation;"
+                                                class="hover-element-row" style="cursor:pointer;">
+                                            </tr>
+                                        
+                                            <!-- Row shown when there is no matching data. -->
+                                            <tr class="mat-row" *matNoDataRow>
+                                                <td class="mat-cell" colspan="6">Nenhum registro encontrado.</td>
+                                            </tr>
+                                        </table>
+                                    </div>
                                 </div>
                                 <div class="mt-5" style="float:right;">
                                     <button mat-mini-fab matStepperPrevious matTooltip="Reabrir"
