--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.scss
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.scss
@@ -136,6 +136,11 @@ form {
   pointer-events: none !important;
 }
 
+::ng-deep .mat-mini-fab.mat-accent.mat-button-disabled{
+  color: rgba(0, 0, 0, 0.26) !important;
+  background-color: rgba(0, 0, 0, 0.12) !important;
+}
+
 .budget-aproved {
   color: #59b0dd;
   opacity: 0.5;
