--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -98,7 +98,7 @@
 
                     <div class="dropdown-divider"></div>
 
-                    <a class="dropdown-item text-gray-600" href="/login">
+                    <a class="dropdown-item text-gray-600" (click)="logout()" style="cursor:pointer;">
                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2"></i>
                         Sair
                     </a>
